[package]
name = "sentiment-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
